exports[`test basic 1`] = `
"var theme = {
  code: ".ais-SearchBox__className {}",
  classNames: {
    className: "ais-SearchBox__className"
  }
};"
`;

exports[`test different JavaScript code 1`] = `
"var theme = {
  code: ".ais-SearchBox__className {}",
  classNames: {
    className: "ais-SearchBox__className"
  }
};
a + a;import "module";"
`;

exports[`test different filename 1`] = `
"var theme = {
  code: ".ais-yo__className {}",
  classNames: {
    className: "ais-yo__className"
  }
};"
`;

exports[`test keyframes rule 1`] = `
"var theme = {
  code: ".ais-SearchBox__className{animation-name: ais-SearchBox__hide;color:blue}@keyframes ais-SearchBox__hide {0%{opacity:0}};",
  classNames: {
    className: "ais-SearchBox__className"
  }
};"
`;

exports[`test multiple class names 1`] = `
"var theme = {
  code: ".ais-SearchBox__a .ais-SearchBox__b, .ais-SearchBox__c ~ .ais-SearchBox__d, .ais-SearchBox__d > .ais-SearchBox__e {color:blue}",
  classNames: {
    a: "ais-SearchBox__a",
    b: "ais-SearchBox__b",
    c: "ais-SearchBox__c",
    d: "ais-SearchBox__d",
    e: "ais-SearchBox__e"
  }
};"
`;
